第一次测试版提交

--- a/图片识别/html/popup.html
+++ b/图片识别/html/popup.html
@@ -28,30 +28,17 @@
             <div class="form-group">
                 <label for="select-source">Select Source</label>
                 <select class="form-control" id="select-source">
-                    <option>1688</option>
-                    <option>1688Global</option>
-                    <option>aliexpress</option>
-                    <option>yiwugo</option>
-                    <option>alibaba</option>
-                  </select>
+                    <option value="2">1688</option>
+                    <option value="3">1688Global</option>
+                    <option value="4">aliexpress</option>
+                    <option value="5">yiwugo</option>
+                    <option value="1" selected>alibaba</option>
+                </select>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <input type="file" id="exampleInputFile">
-                <p class="help-block">Example block-level help text here.</p>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> Check me out
-                </label>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="button" id="save" class="btn btn-default">Save</button>
         </form>
     </div>
+    <script src="../scripts/popup.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
