--- a/图片识别/html/popup.html
+++ b/图片识别/html/popup.html
@@ -35,7 +35,8 @@
                     <option value="1" selected>alibaba</option>
                 </select>
             </div>
-            <button type="button" id="save" class="btn btn-default">Save</button>
+            <button type="button" id="save" class="btn btn-success">Save</button>
+            <button type="button" id="default" class="btn btn-info">Default</button>
         </form>
     </div>
     <script src="../scripts/popup.js" type="text/javascript" charset="utf-8"></script>
