新加了敦煌网站点，修改了css样式分类那一行不对齐的问题

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -32,6 +32,7 @@
                     <option value="3">1688Global</option>
                     <option value="4">aliexpress</option>
                     <option value="5">yiwugo</option>
+                    <option value="6">DHgate</option>
                     <option value="1" selected>alibaba</option>
                 </select>
             </div>
