--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -32,7 +32,8 @@
                     <option value="3">1688Global</option>
                     <option value="4">aliexpress</option>
                     <option value="5">yiwugo</option>
-                    <option value="6">DHgate</option>
+                    <option value="6">dhgate</option>
+                    <option value="7">mic</option>
                     <option value="1" selected>alibaba</option>
                 </select>
             </div>
