去掉敦煌网、制造中国、图片搜索空跑一次上传的逻辑，添加新站点CJ和兰亭集势

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -34,6 +34,8 @@
                     <option value="5">yiwugo</option>
                     <option value="6">dhgate</option>
                     <option value="7">mic</option>
+                    <option value="8">cjds</option>
+                    <option value="9">litbox</option>
                     <option value="1" selected>alibaba</option>
                 </select>
             </div>
