增加新站点 1688overseas

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -36,6 +36,7 @@
                     <option value="7">mic</option>
                     <option value="8">cjds</option>
                     <option value="9">litbox</option>
+                    <option value="10">1688overseas</option>
                     <option value="1" selected>alibaba</option>
                 </select>
             </div>
