增加了banggood、环球华品、环球资源、三个站点

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -38,6 +38,9 @@
 					<option value="8">cjds</option>
                     <option value="7">mic</option>
                     <option value="9">litbox</option>
+                    <option value="11">banggood</option>
+                    <option value="12">chinabrands</option>
+                    <option value="13">globalres</option>
                 </select>
             </div>
             <button type="button" id="save" class="btn btn-success">Save</button>
