新加了站点Aliexpress ZapieX

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -30,9 +30,10 @@
                 <select class="form-control" id="select-source">
 					<option value="1" selected>alibaba</option>
                     <option value="2">1688</option>
-                    <option value="3">1688Global</option>
+                    <option value="3">1688global</option>
 					<option value="10">1688overseas</option>
-                    <option value="4">aliexpress</option>
+                    <option value="4">aliexpressDS</option>
+                    <option value="14">aliexpressZapieX</option>
                     <option value="5">yiwugo</option>
                     <option value="6">dhgate</option>
 					<option value="8">cjds</option>
