增加新站点 1688 Rapid 注释掉没有返回的多语言接口

--- a/ChromePlugin/html/popup.html
+++ b/ChromePlugin/html/popup.html
@@ -30,6 +30,7 @@
                 <select class="form-control" id="select-source">
 					<option value="1" selected>alibaba</option>
                     <option value="2">1688</option>
+                    <option value="15">1688rapid</option>
                     <option value="3">1688global</option>
 					<option value="10">1688overseas</option>
                     <option value="4">aliexpressDS</option>
