--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="./iconfont/iconfont.css">
+    <link rel="stylesheet" href="iconfont/font-1/iconfont.css">
+    <link rel="stylesheet" href="iconfont/font-2/iconfont.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="./js/jquery.min.js"></script>
 	<script src="./js/crop/js/jquery.Jcrop.min.js"></script>
