修改popup动态渲染

--- a/plugin/html/popup.html
+++ b/plugin/html/popup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../bootstrap-3.4.1/css/bootstrap.min.css">
     <script src="../scripts/jquery-1.8.3.js"></script>
     <script src="../bootstrap-3.4.1/js/bootstrap.min.js"></script>
+    <script src="../scripts/source_map.js"></script>
     <style>
         .container {
             width: 400px;
@@ -30,21 +31,21 @@
                 <!--选择默认货源-->
                 <label data-locale="selectSource" for="select-source"></label>
                 <select class="form-control" id="select-source">
-					<option value="1" selected>alibaba</option>
-                    <option value="2">1688</option>
-                    <option value="3">1688rapid</option>
-                    <option value="4">1688global</option>
-					<option value="5">1688overseas</option>
-                    <option value="6">aliexpressDS</option>
-                    <option value="7">aliexpressZapieX</option>
-                    <option value="8">yiwugo</option>
-                    <option value="9">dhgate</option>
-					<option value="10">cjds</option>
-                    <option value="11">mic</option>
-                    <option value="12">litbox</option>
-                    <option value="13">banggood</option>
-                    <option value="14">chinabrands</option>
-                    <option value="15">globalres</option>
+<!--					<option value="1" selected>alibaba</option>-->
+<!--                    <option value="2">1688</option>-->
+<!--                    <option value="3">1688rapid</option>-->
+<!--                    <option value="4">1688global</option>-->
+<!--					<option value="5">1688overseas</option>-->
+<!--                    <option value="6">aliexpressDS</option>-->
+<!--                    <option value="7">aliexpressZapieX</option>-->
+<!--                    <option value="8">yiwugo</option>-->
+<!--                    <option value="9">dhgate</option>-->
+<!--					<option value="10">cjds</option>-->
+<!--                    <option value="11">mic</option>-->
+<!--                    <option value="12">litbox</option>-->
+<!--                    <option value="13">banggood</option>-->
+<!--                    <option value="14">chinabrands</option>-->
+<!--                    <option value="15">globalres</option>-->
                 </select>
             </div>
             <!--保存-->
