--- a/plugin/html/popup.html
+++ b/plugin/html/popup.html
@@ -51,7 +51,7 @@
             <!--保存-->
             <button type="button" id="save" class="btn btn-success" data-locale="save"></button>
             <!--默认-->
-            <button type="button" id="default" class="btn btn-info" data-locale="default"></button>
+            <button type="button" id="reset" class="btn btn-info" data-locale="reset"></button>
         </form>
     </div>
     <script src="../scripts/popup.js" type="text/javascript" charset="utf-8"></script>
